--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-streamlit==1.31.0 pandas==2.2.0 numpy==1.26.4 scikit-learn==1.4.0 xgboost==2.0.3 matplotlib==3.8.2 seaborn==0.13.2 shap==0.44.1 pillow==10.2.0
+   streamlit==1.31.0
+   pandas==2.2.0
+   numpy==1.26.4
+   scikit-learn==1.4.0
+   xgboost==2.0.3
+   matplotlib==3.8.2
+   seaborn==0.13.2
+   shap==0.44.1
+   pillow==10.2.0
